--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'cloud.lexium.caesar'
+group 'cloud.lexium.httpclient'
 version '1.0-SNAPSHOT'
 
 repositories {
