new branch for dev versions. Added an abstract config class. Also added a wrapper module

--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
-plugins {
-    id 'java'
-}
+subprojects {
+    apply plugin: 'java'
 
-group 'cloud.lexium.httpclient'
-version '1.0-SNAPSHOT'
+    sourceCompatibility  = 1.8
+    group 'cloud.lexium.httpclient'
+    version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+    repositories {
+        mavenCentral()
+    }
 
-dependencies {
-    compileOnly "org.projectlombok:lombok:1.18.16"
-    annotationProcessor "org.projectlombok:lombok:1.18.16"
+    dependencies {
+        compileOnly "org.projectlombok:lombok:1.18.16"
+        annotationProcessor "org.projectlombok:lombok:1.18.16"
 
-    implementation "com.google.code.gson:gson:2.8.6"
+        implementation "com.google.code.gson:gson:2.8.6"
 
-    compile "org.jetbrains:annotations:16.0.2"
+        compile "org.jetbrains:annotations:16.0.2"
+    }
 }
