--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,7 @@ subprojects {
         compileOnly "org.projectlombok:lombok:1.18.16"
         annotationProcessor "org.projectlombok:lombok:1.18.16"
 
-        implementation "com.google.code.gson:gson:2.8.6"
-
         compile "org.jetbrains:annotations:16.0.2"
+        compile 'com.google.guava:guava:30.1-jre'
     }
 }
