added url encoding, and made performance improvements

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ subprojects {
     group 'cloud.lexium.httpclient'
     version '1.0-SNAPSHOT'
 
+    compileJava.options.encoding = 'UTF-8'
+
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
+
     repositories {
         mavenCentral()
     }
