--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,20 @@
-subprojects {
-    apply plugin: 'java'
+plugins {
+    id 'java'
+}
 
-    sourceCompatibility  = 1.8
-    group 'cloud.lexium.httpclient'
-    version '1.0-SNAPSHOT'
+group 'cloud.lexium.httpclient'
+version '1.0-SNAPSHOT'
 
-    compileJava.options.encoding = 'UTF-8'
+repositories {
+    mavenCentral()
+}
 
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
-    }
+dependencies {
+    compileOnly "org.projectlombok:lombok:1.18.16"
+    annotationProcessor "org.projectlombok:lombok:1.18.16"
 
-    repositories {
-        mavenCentral()
-    }
+    implementation "com.google.code.gson:gson:2.8.6"
 
-    dependencies {
-        compileOnly "org.projectlombok:lombok:1.18.16"
-        annotationProcessor "org.projectlombok:lombok:1.18.16"
-
-        compile "org.jetbrains:annotations:16.0.2"
-        compile 'com.google.guava:guava:30.1-jre'
-    }
+    compile "org.jetbrains:annotations:16.0.2"
+    compile "com.google.guava:guava:30.1-jre"
 }
