--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,15 @@ dependencies {
     compileOnly "org.projectlombok:lombok:1.18.16"
     annotationProcessor "org.projectlombok:lombok:1.18.16"
 
-    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "com.squareup.moshi:moshi:1.11.0"
 
     compile "org.jetbrains:annotations:16.0.2"
     compile "com.google.guava:guava:30.1-jre"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
+}
+
+test {
+    useJUnitPlatform()
 }
