--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ plugins {
 group 'cloud.lexium.httpclient'
 version '1.0-SNAPSHOT'
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 repositories {
     mavenCentral()
 }
