set up multi module project for the server

--- a/build.gradle
+++ b/build.gradle
@@ -12,19 +12,15 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compileOnly "org.projectlombok:lombok:1.18.16"
-    annotationProcessor "org.projectlombok:lombok:1.18.16"
+allprojects {
+    apply plugin: 'java'
 
-    implementation "com.squareup.moshi:moshi:1.11.0"
+    dependencies {
+        compileOnly "org.projectlombok:lombok:1.18.16"
+        annotationProcessor "org.projectlombok:lombok:1.18.16"
 
-    compile "org.jetbrains:annotations:16.0.2"
-    compile "com.google.guava:guava:30.1-jre"
+        implementation "com.squareup.moshi:moshi:1.11.0"
 
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
-}
-
-test {
-    useJUnitPlatform()
+        compile "org.jetbrains:annotations:16.0.2"
+    }
 }
