worked on the server module

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -11,4 +11,7 @@ repositories {
 
 dependencies {
     compile 'io.javalin:javalin:3.13.4'
+    compile "org.slf4j:slf4j-simple:1.7.30"
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
