--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'cloud.lexium.httpclient'
+group 'com.github.martinyes.httpclient'
 version '0.3.0-SNAPSHOT'
 
 compileJava.options.encoding = 'UTF-8'
@@ -19,6 +19,6 @@ allprojects {
         compileOnly "org.projectlombok:lombok:1.18.16"
         annotationProcessor "org.projectlombok:lombok:1.18.16"
 
-        compile "org.jetbrains:annotations:16.0.2"
+        compile 'org.jetbrains:annotations:23.0.0'
     }
 }
