--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,17 +2,18 @@ plugins {
     id 'java'
 }
 
-group 'cloud.lexium.httpclient'
-version '0.2.5-SNAPSHOT'
+group 'com.github.martinyes.httpclient'
+version '0.3.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile "com.google.guava:guava:30.1-jre"
+    compile 'com.google.guava:guava:31.1-jre'
+    implementation 'com.google.code.gson:gson:2.9.1'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
