--- a/server/build.gradle
+++ b/server/build.gradle
@@ -2,16 +2,16 @@ plugins {
     id 'java'
 }
 
-group 'cloud.lexium.httpclient'
-version '1.0-SNAPSHOT'
+group 'com.github.martinyes.httpclient'
+version '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'io.javalin:javalin:3.13.4'
-    compile "org.slf4j:slf4j-simple:1.7.30"
+    compile 'io.javalin:javalin:4.6.3'
+    compile 'org.slf4j:slf4j-simple:1.7.36'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
